[package]
name = "async_bot"
version = "0.1.0"
authors = ["Benjamin James <ben24jp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
chrono = "0.4"
tabled = "0.1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
